--- a/es/Promise.html
+++ b/es/Promise.html
@@ -15,7 +15,19 @@
     self.onResolvedCallback = [] // Promise resolve时的回调函数集，因为在Promise结束之前有可能有多个回调添加到它上面
     self.onRejectedCallback = [] // Promise reject时的回调函数集，因为在Promise结束之前有可能有多个回调添加到它上面
 
-    executor(resolve, reject) // 执行executor并传入相应的参数
+    function resolve(value) {
+      // TODO
+    }
+
+    function reject(reason) {
+      // TODO
+    }
+
+    try { // 考虑到执行executor的过程中有可能出错，所以我们用try/catch块给包起来，并且在出错后以catch到的值reject掉这个Promise
+      executor(resolve, reject) // 执行executor
+    } catch(e) {
+      reject(e)
+    }
   }
   </script>
 </body>
